--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,7 @@
 spring.application.name=hhplus_w2
 
-# H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-# H2 Console Configuration (for development)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# JPA Configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# DB 관련 설정 제거 (인메모리 구현을 위해 H2, JPA 설정 제거)
+# 모든 데이터는 ConcurrentHashMap, Map, Set 등으로 관리
 
 # Swagger/OpenAPI Configuration
 springdoc.api-docs.path=/api-docs
