--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ecommerce?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: hhplus
-    password: hhplus123
+    url: jdbc:mysql://localhost:3306/${MYSQL_DATABASE:ecommerce}?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: ${MYSQL_USER:hhplus}
+    password: ${MYSQL_PASSWORD:hhplus123}
 
   jpa:
     hibernate:
