GitGuardian 시크릿 노출 완전 제거
- application.yml의 password fallback 값 제거
- .env.example 더미 값으로 변경
- 환경 변수 필수 사용으로 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/${MYSQL_DATABASE:ecommerce}?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: ${MYSQL_USER:hhplus}
-    password: ${MYSQL_PASSWORD:hhplus123}
+    password: ${MYSQL_PASSWORD}
 
   jpa:
     hibernate:
