--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,7 @@ spring:
         format_sql: true
         show_sql: true
         use_sql_comments: true
+        default_batch_fetch_size: 100  # N+1 문제 해결 (코치님 피드백 반영)
     open-in-view: false
 
   sql:
